# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py  settings.py
nanobot/: Dockerfile  README.md  entrypoint.py  main.py  pyproject.toml
nanobot/workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanobot/workspace/memory/: HISTORY.md  MEMORY.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
nanobot/workspace/skills/structured-ui/: SKILL.md
