[project]
name = "nanobot"
version = "0.1.0"
description = "Custom nanobot agent setup for LMS integration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp-lms",
    "mcp-webchat",
    "mcp-obs",
    "nanobot-webchat",
    "nanobot-ai",
    "pydantic",
    "pydantic-settings",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-logging>=0.61b0",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-lms = { workspace = true, editable = true }
mcp-webchat = { workspace = true, editable = true }
mcp-obs = { workspace = true, editable = true }
nanobot-webchat = { workspace = true, editable = true }
